@@ -199,4 +199,81 @@ describe('ActionController', () => {
       expect(textarea.selectionEnd).toBe(textarea.value.length);
     });
   });
+
+  describe('reset method', () => {
+    const handleChangeEvent = jest.fn();
+    document.addEventListener('change', handleChangeEvent);
+
+    beforeEach(async () => {
+      jest.resetAllMocks();
+
+      await setup(
+        `<input
+          id="reset-test"
+          value="the default"
+          type="text"
+          data-controller="w-action"
+          data-action="some-event->w-action#reset"
+        />`,
+      );
+    });
+
+    it('should change value when existing value and new value are different', () => {
+      const input = document.getElementById('reset-test');
+
+      // Change the value to something else (via JS)
+      input.value = 'another input value';
+      expect(handleChangeEvent).not.toHaveBeenCalled();
+
+      input.dispatchEvent(
+        new CustomEvent('some-event', { detail: { value: 'not the default' } }),
+      );
+
+      expect(input.value).toBe('not the default');
+      expect(input.value).not.toBe('another input value');
+      expect(handleChangeEvent).toHaveBeenCalled();
+    });
+
+    it('should not change value when current value and new value are the same', () => {
+      expect(handleChangeEvent).not.toHaveBeenCalled();
+      const input = document.getElementById('reset-test');
+
+      input.dispatchEvent(
+        new CustomEvent('some-event', { detail: { value: 'the default' } }),
+      );
+
+      expect(input.value).toBe('the default');
+      expect(input.value).not.toBe('not the default');
+      expect(handleChangeEvent).not.toHaveBeenCalled();
+    });
+
+    it('should reset value to a new value supplied via custom event detail', () => {
+      expect(handleChangeEvent).not.toHaveBeenCalled();
+      const input = document.getElementById('reset-test');
+
+      input.dispatchEvent(
+        new CustomEvent('some-event', {
+          detail: { value: 'a new value from custom event detail' },
+        }),
+      );
+
+      expect(input.value).toBe('a new value from custom event detail');
+      expect(input.value).not.toBe('the default');
+      expect(handleChangeEvent).toHaveBeenCalled();
+    });
+
+    it('should reset value to a new value supplied in action param', () => {
+      expect(handleChangeEvent).not.toHaveBeenCalled();
+      const input = document.getElementById('reset-test');
+      input.setAttribute(
+        'data-w-action-value-param',
+        'a new value from action params',
+      );
+
+      input.dispatchEvent(new CustomEvent('some-event'));
+
+      expect(input.value).toBe('a new value from action params');
+      expect(handleChangeEvent).toHaveBeenCalled();
+    });
+  });
 });
